品項與價格排序

--- a/product.html
+++ b/product.html
@@ -98,17 +98,19 @@
                 <ul class="selector">
                     <li>
                         <select name="" id="" class="category-selector">
-                            <option value="">全部品項</option>
-                            <option value="">巧克力塔類甜點</option>
-                            <option value="">水果塔類甜點</option>
-                            <option value="">北海道重乳酪蛋糕</option>
+                            <option value="全部品項">全部品項</option>
+                            <option value="本月限定塔類甜點">本月限定塔類甜點</option>
+                            <option value="巧克力塔類甜點">巧克力塔類甜點</option>
+                            <option value="水果塔類甜點">水果塔類甜點</option>
+                            <option value="北海道重乳酪蛋糕">北海道重乳酪蛋糕</option>
+                            <option value="其他蛋糕點心類">其他蛋糕點心類</option>
                         </select>
                     </li>
                     <li>
                         <select name="" id="" class="sorting-selector">
-                            <option value="">默認排序</option>
-                            <option value="">價格高到低</option>
-                            <option value="">價格低到高</option>
+                            <option value="默認排序">默認排序</option>
+                            <option value="價格高到低">價格高到低</option>
+                            <option value="價格低到高">價格低到高</option>
                         </select>
                     </li>
                     <li>
