商品資訊rwd、首頁類別調整成套件輪播

--- a/index.html
+++ b/index.html
@@ -210,16 +210,16 @@
         <!-- 精選類別 -->
         <div class="index-feature">
             <h1>精選類別</h1>
-            <ul>
-                <li>
+            <ul class="owl-carousel owl-theme">
+                <li class="item">
                     <a href="#"><img src="./img/category1.jpg" alt="本月限定塔類甜品"></a>
                     <a href="#">巧克力塔類甜點</a>
                 </li>
-                <li>
+                <li class="item">
                     <a href="#"><img src="./img/category2.jpg" alt="杯子系列蛋糕甜品"></a>
                     <a href="#">水果塔類甜點</a>
                 </li>
-                <li>
+                <li class="item">
                     <a href="#"><img src="./img/category3.jpg" alt="慕斯系列蛋糕甜品"></a>
                     <a href="#">北海道重乳酪蛋糕</a>
                 </li>
