--- a/product.html
+++ b/product.html
@@ -17,6 +17,10 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js" integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <link rel="shortcut icon" href="./img/logo.ico" type="image/x-icon">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css">
+    <link rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css">
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/rwd.css">
 </head>
@@ -86,10 +90,10 @@
         <div class="wrapper-products">
             <!-- 公告 -->
             <section>
-                <ul class="product-post">
-                    <li><a href="#"><img src="./img/po4.jpg" alt=""></a></li>
-                    <li><a href="#"><img src="./img/po5.jpg" alt=""></a></li>
-                    <li><a href="#"><img src="./img/po6.jpg" alt=""></a></li>
+                <ul class="product-post owl-carousel owl-theme">
+                    <li class="item"><a href="#"><img src="./img/po5.jpg" alt=""></a></li>
+                    <li class="item"><a href="#"><img src="./img/po4.jpg" alt=""></a></li>
+                    <li class="item"><a href="#"><img src="./img/po6.jpg" alt=""></a></li>
                 </ul>
             </section>
 
@@ -119,7 +123,7 @@
                             <option value="">每頁 16 個</option>
                             <option value="">每頁 20 個</option>
                         </select> -->
-                        <input type="text" placeholder="找商品">
+                        <input type="text" placeholder="找商品" class="find-product">
                     </li>
                 </ul>
 
@@ -234,6 +238,8 @@
                         <p>NT $ <span>625</span></p>
                     </li> -->
                 </ul>
+
+                <p class="cannot-find-product">目前尚無符合條件產品，請修改搜尋條件</p>
 
                 <!-- 頁數 -->
                 <div class="pages">
