--- a/member_logut.html
+++ b/member_logut.html
@@ -15,7 +15,13 @@
         href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.11.3/font/bootstrap-icons.min.css"
         integrity="sha512-dPXYcDub/aeb08c63jRq/k6GaKccl256JQy/AnOq7CAnEZ9FzSL9wSbcZkMp4R26vBsMLFYH4kQ67/bbV8XaCQ=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js" integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"
+        integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css">
+    <link rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css">
     <link rel="shortcut icon" href="./img/logo.ico" type="image/x-icon">
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/rwd.css">
@@ -94,8 +100,8 @@
         </div>
         <div class="member-level-introduction">
             <h1>會員等級說明</h1>
-            <div class="member-level-introduction-center">
-                <div class="memberCard">
+            <div class="member-level-introduction-center owl-carousel owl-theme">
+                <div class="memberCard item">
                     <img src="./img/frame1.svg" alt="">
                     <img src="./img/frame2.svg" alt="">
                     <div class="cardImg">
@@ -111,7 +117,7 @@
                         </ul>
                     </div>
                 </div>
-                <div class="memberCard">
+                <div class="memberCard item">
                     <img src="./img/frame1.svg" alt="">
                     <img src="./img/frame2.svg" alt="">
                     <div class="cardImg">
@@ -127,7 +133,7 @@
                         </ul>
                     </div>
                 </div>
-                <div class="memberCard">
+                <div class="memberCard item">
                     <img src="./img/frame1.svg" alt="">
                     <img src="./img/frame2.svg" alt="">
                     <div class="cardImg">
@@ -144,7 +150,7 @@
                         </ul>
                     </div>
                 </div>
-                <div class="memberCard">
+                <div class="memberCard item">
                     <img src="./img/frame1.svg" alt="">
                     <img src="./img/frame2.svg" alt="">
                     <div class="cardImg">
@@ -233,6 +239,7 @@
             </div>
         </div>
     </footer>
+    <script src="./js/member_logout.js"></script>
     <script src="./js/public.js"></script>
 </body>
 
