商品資訊搜尋功能+其他完善

--- a/about.html
+++ b/about.html
@@ -90,7 +90,7 @@
         <div class="shop-info">
             <p>
                 每一口甜點，都是命運中的美好相遇，<br>
-                在這裡，我們用心製作每一份甜蜜，
+                在這裡，我們用心製作每一份甜蜜，<br>
                 將傳統與創新完美融合，<br>
                 打造一個讓人感受幸福的甜點烏托邦。
             </p>
@@ -98,7 +98,7 @@
                 <div class="about-info">
                     <h2>
                         「相信每一次的相遇，
-                        都是命運的安排，<br>
+                        都是命運的安排，
                         而每一口甜點，
                         都是一場美麗的邂逅。」
                     </h2>
