--- a/product.html
+++ b/product.html
@@ -240,7 +240,7 @@
                     </li> -->
                 </ul>
 
-                <p class="cannot-find-product">目前尚無符合條件產品，請修改搜尋條件</p>
+                <p class="cannot-find-product">目前尚無符合條件商品，請修改搜尋條件</p>
 
                 <!-- 頁數 -->
                 <div class="pages">
